2005-12-12  Josh Stone  <joshua.i.stone@intel.com>

	* tapset/context.stp (execname,pid,tid,ppid,pexecname,gid,egid,uid,euid):
	Removed in_interrupt checks and other pointer checks.  We now operate on
	the assumption that "current" and its related data are always valid.

2005-12-12  Kevin Stafford  <krstaffo@us.ibm.com>
	* main.cxx (main): Added arch directory to the existing
	kernel-version-sensitive search path.
2005-12-12  Frank Ch. Eigler  <fche@redhat.com>

	* translate.cxx (translate_pass): Emit #include <linux/profile.h>.

2005-12-12  Will Cohen  <wcohen@redhat.com>

	* tapset/logging.stp (function_exit): Make sure systemtap probes
	stop collection additional data.

2005-12-12  Frank Ch. Eigler  <fche@redhat.com>

	Fix parse tree pretty-printer.
	* staptree.h (print_format): Add raw_components field.
	* parse.cxx (parse_symbol): Set it.
	* staptree.cxx (lex_cast_qstring): Copy it here too.
	(binary_expression::print): Add a space around operator, due to
	lexical ambiguity (expr % paren-expr) vs %( preprocessor op.
	(array_in:: foreach_loop:: arrayindex::print): Print base as indexable.
	(print_format::string_to_components): Use parse_error, not semantic.
	(print_format::print): Properly quote formatting string.  Print
	histogram argument.
	* translate.cxx (visit_print_format): Properly quote formatting string.
	(varlock): Reword lock timeout error message.
	* testsuite/buildok/printf.stp: Add some quoting troublemakers.
	* testsuite/parseok/unparser.stp: New file.	

2005-12-11  Roland McGrath  <roland@redhat.com>

	* configure.ac: Bump version to 0.5.1 for test builds.
	* systemtap.spec.in: Remove ExclusiveArch.
	* configure: Regenerated.

	PR 1916
	* configure.ac: Grok --with-elfutils.
	* Makefile.am [BUILD_ELFUTILS] (install-elfutils, stamp-elfutils):
	New targets.
	[BUILD_ELFUTILS] (stap_LDFLAGS, stap_LDFLAGS): Add flags
	to point at local elfutils build.
	[BUILD_ELFUTILS] (BUILT_SOURCES): Add stamp-elfutils.